Добавляет разметку для оформления иконок хедера и футера.

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,21 @@
         <!------------------------------Контакты------------------------------------->
         <ul class="contacts-list list">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="contacts-link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
 
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="contacts-link" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -253,6 +259,44 @@
             </li>
           </ul>
         </address>
+
+        <div class="social-footer-wrapper">
+          <p class="section-text footer">присоединяйтесь</p>
+
+          <ul class="social-list footer list">
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-instagram-f"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-twitter-f"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-facebook-f"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-linkedin-f"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
