--- a/index.html
+++ b/index.html
@@ -75,34 +75,62 @@
           <h2 class="visually-hidden">Особенности компании</h2>
 
           <ul class="feature-list section-list list">
-            <li class="feature-item icon-antenna">
+            <li class="feature-item">
+              <div class="feature-icon-wrapper">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="feature-title section-subtitle">Внимание к деталям</h3>
+
               <p class="section-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
 
-            <li class="feature-item icon-clock">
+            <li class="feature-item">
+              <div class="feature-icon-wrapper">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+
               <h3 class="feature-title section-subtitle">Пунктуальность</h3>
+
               <p class="section-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
 
-            <li class="feature-item icon-diagram">
+            <li class="feature-item">
+              <div class="feature-icon-wrapper">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="feature-title section-subtitle">Планирование</h3>
+
               <p class="section-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
 
-            <li class="feature-item icon-astronaut">
+            <li class="feature-item">
+              <div class="feature-icon-wrapper">
+                <svg class="feature-icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="feature-title section-subtitle">
                 Современные технологии
               </h3>
+
               <p class="section-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
@@ -202,6 +230,39 @@
               />
               <h3 class="team-mem-title section-subtitle">Ольга Репина</h3>
               <p class="team-text section-text" lang="en">Frontend Developer</p>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <li class="team-item">
@@ -213,6 +274,39 @@
               />
               <h3 class="team-mem-title section-subtitle">Николай Тарасов</h3>
               <p class="team-text section-text" lang="en">Marketing</p>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <li class="team-item">
@@ -224,6 +318,39 @@
               />
               <h3 class="team-mem-title section-subtitle">Михаил Ермаков</h3>
               <p class="team-text section-text" lang="en">UI Designer</p>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -237,7 +364,7 @@
           <ul class="clients-list section-list list">
             <li class="clients-item">
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="45" height="50">
                   <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
@@ -245,7 +372,7 @@
 
             <li class="clients-item">
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="40" height="52">
                   <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
@@ -253,7 +380,7 @@
 
             <li class="clients-item">
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="41" height="43">
                   <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
@@ -261,7 +388,7 @@
 
             <li class="clients-item">
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="80" height="42">
                   <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
@@ -269,7 +396,7 @@
 
             <li class="clients-item">
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="59" height="47">
                   <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
@@ -277,7 +404,7 @@
 
             <li class="clients-item">
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="89" height="45">
                   <use href="./images/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
@@ -311,22 +438,43 @@
           </ul>
         </address>
 
-        <p class="section-text footer">присоединяйтесь</p>
+        <div class="social-footer-wrapper">
+          <p class="section-text footer">присоединяйтесь</p>
 
-        <ul class="social-list list">
-          <li class="social-item">
-            <a href="" class="social-link"></a>
-          </li>
-          <li class="social-item">
-            <a href="" class="social-link"></a>
-          </li>
-          <li class="social-item">
-            <a href="" class="social-link"></a>
-          </li>
-          <li class="social-item">
-            <a href="" class="social-link"></a>
-          </li>
-        </ul>
+          <ul class="social-list footer list">
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-instagram-f"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-twitter-f"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-facebook-f"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-item footer">
+              <a href="" class="social-link footer">
+                <svg class="social-icon footer">
+                  <use href="./images/icons.svg#icon-linkedin-f"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
