--- a/portfolio.html
+++ b/portfolio.html
@@ -239,26 +239,28 @@
     <!----------------------------Подвал сайта-------------------------------------->
     <footer class="section footer">
       <div class="container footer">
-        <a href="/index.html" class="logo footer"
-          >Web<span class="footer">Studio</span>
-        </a>
+        <div class="adress-footer-wrapper">
+          <a href="/index.html" class="logo footer"
+            >Web<span class="footer">Studio</span>
+          </a>
 
-        <address>
-          <span class="address">г. Киев, пр-т Леси Украинки, 26<br /></span>
+          <address>
+            <span class="address">г. Киев, пр-т Леси Украинки, 26<br /></span>
 
-          <ul class="contacts-list footer list">
-            <li>
-              <a class="contacts-link footer" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a class="contacts-link footer" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+            <ul class="contacts-list footer list">
+              <li class="contacts-item footer">
+                <a class="contacts-link footer" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="contacts-item footer">
+                <a class="contacts-link footer" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
 
         <div class="social-footer-wrapper">
           <p class="section-text footer">присоединяйтесь</p>
